--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                     </form>
                 </div>
                 <div class="snooze">
-                    <i class='bx bx-bell' ></i>
+                    <span class="bell">
+                        <i class='bx bx-bell' ></i>
+                    </span>
                     <i class='bx bx-pen'></i>
                 </div>
             </div>
@@ -231,7 +233,7 @@
             </div>
             <div class="copyright">
                 <div class="socials">
-                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/claymeers"><i class="fa-brands fa-github"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                 </div>
@@ -293,7 +295,7 @@
     </div>
     <footer>
         <div class="socials">
-            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/claymeers"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
         </div>
